# RAGToolbox

./: README.md  pyproject.toml
examples/: 01_quickstart.py  02_scientific_research.py  03_complex_layouts_vlm.py  04_highly_accurate_retrieval.py  05_knowledge_graph_extraction.py  06_evaluation_benchmark.py
src/land_rag/: base.py  config.py  indexing.py  main.py  ocr.py  postprocessing.py  retrieval.py
src/land_rag/utils/: rrf.py
tests/: conftest.py  test_agentic_components.py  test_config.py  test_indexing.py  test_ocr.py  test_pipeline.py  test_retrieval.py
